# reverse-synth-research

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  chat-with-gemini.txt  pyproject.toml
.github/workflows/: ci.yml
amplitude/: amplitude-envelope-research-plan.md
archive/engine-detection/: engine-detection-research-plan.md
archive/inverse-synth/: inverse-synth-research-plan.md
docs/: index.html
docs/site-assets/: brand.css
docs/superpowers/plans/: 2026-05-02-subtractive-ontology.md  2026-06-19-relocate-tone-generation-pipeline.md
docs/superpowers/specs/: 2026-05-02-subtractive-ontology-backlog.md  2026-05-02-subtractive-ontology-mvp.md  (+2 more)
modulation/: modulation-tracking-research-plan.md
parameter-mapping/: parameter-mapping-plan.md  subtractive-ontology.md  subtractive.schema.json  synth-base.schema.json
parameter-mapping/survey/: README.md  juno-x.md  minilogue-xd.md  moog-muse.md  novation-summit.md  ob-x8.md  polybrute-12.md  prophet-5.md  prophet-6.md
scratch/: explore_signalflow.py  explore_signalflow_audio_backend.py  explore_subtractive_renderer.py  run_inference_example.py
scripts/: _eval_helpers.py  eval_tone_generation.py  generate_subtractive_dataset.py  train_tone_generation.py
src/tone_generation/: README.md  __init__.py  dataset.py  model.py  renderer.py  schema_io.py
tests/: test_tone_generation_dataset.py  test_tone_generation_model.py  test_tone_generation_renderer.py  test_tone_generation_schema_io.py  test_tone_generation_smoke.py
tone-generation/: tone-generation-research-plan.md
(+3 files in other folders)
