[project]
name = "tone-generation-training"
version = "0.1.0"
description = "Subtractive tone-generation training pipeline (SignalFlow renderer → synthetic dataset → conditioned CNN). Research code for reverse-synth-research."
requires-python = ">=3.11,<3.12"
readme = "src/tone_generation/README.md"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "signalflow>=0.4.0,<0.5.4",
  "torch>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "librosa>=0.10.0",
  "soundfile>=0.12",
  "jsonschema>=4.21",
  "referencing>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tone_generation"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "librosa.*",
  "soundfile.*",
  "scipy.*",
  "signalflow.*",
  "jsonschema.*",
  "referencing.*",
]
ignore_missing_imports = true
